--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 title: 冰书 BingBook
 description: 深度阅读精选
 baseurl: "" 
-url: "https://你的用户名.github.io" 
+url: "https://bingbook.cn.github.io" 
 markdown: kramdown
 theme: null
