--- a/.github/workflows/daily-mail.yml
+++ b/.github/workflows/daily-mail.yml
@@ -4,9 +4,11 @@ on:
   # 方式1：手动触发 (推荐，每次你更新完文章，点一下按钮就发)
   workflow_dispatch:
 
-  # 方式2：定时触发 (比如每天早上8点，注意是UTC时间，北京时间要+8)
-  # schedule:
-  #   - cron: '0 0 * * *' 
+  # 方式2：定时触发
+  # 含义：第0分钟，第2小时(UTC)，任意日期，任意月份，周一
+  # 对应北京时间：每周一 10:00 AM(北京时间UTC+8)
+    schedule:
+    - cron: '0 2 * * 1' 
 
 jobs:
   send-email:
